--- a/src/components/modal/Modal3.css
+++ b/src/components/modal/Modal3.css
@@ -24,6 +24,13 @@
     z-index: 1000;
 
 }
+.close-icon{
+     position: absolute;
+     right:0;
+     top:0;
+     margin-top:20px;
+     margin-right:20px;
+}
 
 .inner-wrapper {
     display: flex;
