--- a/src/screens/newoffice/NewOffice.css
+++ b/src/screens/newoffice/NewOffice.css
@@ -8,11 +8,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     padding: 12px 16px;
     gap: 10px;
 
 }
+
+
 
 .form input {
     border: none;
@@ -33,25 +34,31 @@
     color: rgba(30, 41, 59, 0.6);
 }
 
+.button-container{
+    width:100%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    margin-top:20px;
+}
+
+.errorMessage{
+    color:red;
+    width:100%;
+}
 .button {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    text-align:center;
     padding: 16px;
-    gap: 10px;
-    width: 232px;
+    width: 80%;
     height: 48px;
     background: #489DDA;
     border-radius: 100px;
     border: none;
-
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
-    text-align: center;
     letter-spacing: 1px;
     text-transform: uppercase;
     color: #F8FAFC;
